--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,7 @@
               }
             ],
             "styles": [
+              "src/custom-theme.scss",
               "src/styles.css"
             ]
           },
@@ -88,5 +89,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "dfa24f77-3236-46a3-938a-fbee93525349"
   }
 }
